@@ -1,4 +1,5 @@
 [CW5]
++ Upload turn left, right, and forward icons after app registration for UpdateTurnList.
 * UpdateTurnList dialog: fix the number of soft buttons sent by default, allow to specify image for each turn.
 * Don't set app icon for protocol version v1.
 * ShowConstantTBT and UpdateTurnList messages: always send soft buttons even if an empty array.
